--- a/FrontEnd/src/app/layout/header/header.component.scss
+++ b/FrontEnd/src/app/layout/header/header.component.scss
@@ -1,3 +1,6 @@
+@import "../../../_theme";
+@import "../../../styles.scss";
+
 .button__icon {
     background: none;
     border: none;
@@ -22,3 +25,6 @@
      }
   }
   
+  .mat-icon{
+    color: $white;
+  }
