--- a/FrontEnd/src/app/layout/nav/nav.component.html
+++ b/FrontEnd/src/app/layout/nav/nav.component.html
@@ -2,7 +2,7 @@
   <div *ngIf="MenuOpened" (click)="onSideNavClick()">
     <a class="options__menu" >
       <mat-icon class="icon_size">home</mat-icon>
-      <p>Home</p>
+      <p routerLink="home">Home</p>
     </a>
     <a class="options__menu" >
       <mat-icon class="icon_size">person</mat-icon>
