--- a/FrontEnd/src/app/layout/header/header.component.scss
+++ b/FrontEnd/src/app/layout/header/header.component.scss
@@ -1,30 +1,52 @@
 @import "../../../_theme";
 @import "../../../styles.scss";
 
+.header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.button-size{
+  margin: 0px 0px 9px;
+}
+
 .button__icon {
-    background: none;
-    border: none;
-  }
-  
-  .icon__menu{
-      font-size: 35px;
-      cursor: pointer;
-      color: #303030;
-  }
-  
-  .background_header{
-   background-color: #070720;
-  }
+  background: none;
+  border: none;
+  margin: 0px 0px 9px;
+}
 
-  .logo-img{
+.icon__menu {
+  font-size: 35px;
+  cursor: pointer;
+  color: #303030;
+}
+
+.background_header {
+  background-color: #070720;
+}
+
+.logo-img {
+  width: 100%;
+  max-width: 150px;
+
+  .img {
     width: 100%;
-    max-width: 150px;
+  }
+}
 
-    .img{
-        width: 100%;
-     }
+.mat-icon {
+  color: $white;
+}
+
+.icons-link{
+  width: 2%;
+  cursor: pointer;
+  margin: 12px 0px 0px;
+
+  &_icon{
+    width: 100%;
+    
   }
-  
-  .mat-icon{
-    color: $white;
-  }
+}
