Edit-Componente de leitura. Tabela.

--- a/FrontEnd/src/app/layout/header/header.component.html
+++ b/FrontEnd/src/app/layout/header/header.component.html
@@ -6,7 +6,7 @@
   </div>
   <div class="icons-link">
     <a (click)="toggleModal()">                    
-      <img class="_icon"  width="100%" src="../../../assets/linkedin.png" alt="iconlikedin">           
+      <img class="_icon"  width="25px" src="../../../assets/linkedin.png" alt="iconlikedin">           
    </a>
   </div>
 </mat-toolbar>
