--- a/FrontEnd/src/app/content/product-crud/product-read/product-read.component.scss
+++ b/FrontEnd/src/app/content/product-crud/product-read/product-read.component.scss
@@ -7,8 +7,10 @@ table{
 
 .edit > mat-icon {
     color: #d9cd26;
+    cursor: pointer;
 }
 
 .delete > mat-icon {
     color: #e35e6b;
+    cursor: pointer;
 }
