--- a/FrontEnd/src/app/layout/nav/nav.component.html
+++ b/FrontEnd/src/app/layout/nav/nav.component.html
@@ -9,6 +9,10 @@
       <p routerLink="samplestore">Sample store</p>
     </a>   
     <a class="options__menu" >
+      <mat-icon class="icon_size">catching_pokemon</mat-icon>        
+      <p routerLink="pokedex">Pokedex</p>
+    </a>  
+    <a class="options__menu" >
       <mat-icon class="icon_size">person</mat-icon>
       <p>About</p>
     </a>   
