--- a/FrontEnd/src/app/layout/header/header.component.html
+++ b/FrontEnd/src/app/layout/header/header.component.html
@@ -4,9 +4,9 @@
   </button>   
   <div class="logo-img">    
   </div>
-  <div class="icons-link">
+  <!-- <div class="icons-link">
     <a (click)="toggleModal()">                    
       <img class="_icon"  width="25px" src="../../../assets/linkedin.png" alt="iconlikedin">           
    </a>
-  </div>
+  </div> -->
 </mat-toolbar>
