Add-Crud completo

--- a/FrontEnd/src/app/layout/header/header.component.html
+++ b/FrontEnd/src/app/layout/header/header.component.html
@@ -4,6 +4,15 @@
   </button>   
   <div class="logo-img">    
   </div>
+  <span class="title-group">
+    <a routerLink="{{routeUrl}}">
+      <i class="material-icons">
+        {{icon}}
+      </i>
+      {{title}}
+    </a>
+
+  </span>
   <!-- <div class="icons-link">
     <a (click)="toggleModal()">                    
       <img class="_icon"  width="25px" src="../../../assets/linkedin.png" alt="iconlikedin">           
