--- a/FrontEnd/src/styles.scss
+++ b/FrontEnd/src/styles.scss
@@ -75,6 +75,13 @@
     }
   }
   
+  .msg-success {
+    background-color: #28a745;
+    color: #fff
+  }
   
-  
+  .msg-failure{
+    background-color: rgb(240, 82, 82);
+    color: #fff;
+  }
   
