--- a/FrontEnd/src/app/content/product-crud/product-read/product-read.component.html
+++ b/FrontEnd/src/app/content/product-crud/product-read/product-read.component.html
@@ -22,10 +22,10 @@
      <ng-container matColumnDef="action">
       <th mat-header-cell *matHeaderCellDef>Ações</th>
       <td mat-cell *matCellDef="let row">
-       <a (click)="navigateToProductUpdate()" class="edit">
+       <a (click)="navigateToProductUpdate(row)" class="edit">
         <mat-icon class="material-icons">edit</mat-icon>
        </a>
-       <a routerLink="/samplestore/update/{{row.id}}" class="delete">
+       <a (click)="navigateToProductDelete(row)" class="delete">
          <mat-icon class="material-icons">delete</mat-icon>
        </a>
       </td>
