--- a/FrontEnd/src/app/content/product-crud/product-update/product-update.component.html
+++ b/FrontEnd/src/app/content/product-crud/product-update/product-update.component.html
@@ -1,13 +1,16 @@
-<mat-card>
+<section>
+  <div class="button-close">
+    <button mat-button mat-dialog-close>
+      <i class="material-icons">close</i>
+    </button>
+  </div>
   <mat-card-title>Alterar Produto</mat-card-title>
   <form>
     <mat-form-field>
-      <input matInput placeholder="Nome" 
-      [(ngModel)]="product.name" name="name">
+      <input matInput placeholder="Nome" [(ngModel)]="product.name" name="name">
     </mat-form-field>
     <mat-form-field>
-      <input matInput placeholder="Preço (R$)"
-      [(ngModel)]="product.price" name="price">
+      <input matInput placeholder="Preço (R$)" [(ngModel)]="product.price" name="price">
     </mat-form-field>
   </form>
   <button mat-raised-button (click)="updateProduct()" color="primary">
@@ -16,4 +19,4 @@
   <button mat-raised-button mat-dialog-close>
     Cancelar
   </button>
-</mat-card>
+</section>
